# drync

./: .env.sample  .gitignore  Makefile  README.md  drync.cabal  main.hs
doc/: drync.1  drync.1.md
files/: Client.hs
pkg/: PKGBUILD
src/: Drync.hs
src/Conduit/: Progress.hs
src/Data/Conduit/: Progress.hs  Throttle.hs
src/Drync/: Api.hs  Client.hs  Config.hs  Missing.hs  Options.hs  Request.hs  Sync.hs  System.hs  Token.hs  Transfer.hs
src/Drync/Client/: TH.hs
src/Drync/Drive/: Api.hs  FileList.hs  Item.hs  SyncPlan.hs
src/Drync/Drive/Api/: File.hs  HTTP.hs  Search.hs
test/: files.json
test/Drync/Drive/: FileListSpec.hs
