Name:                   drync
Version:                0.0.0
Author:                 Pat Brisbin <pbrisbin@gmail.com>
Maintainer:             Pat Brisbin <pbrisbin@gmail.com>
License:                MIT
License-File:           LICENSE
-- Synopsis:               Short description, appears in Hackage listings
-- Description:            Long explanation, appears at top of project page
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -static
  Exposed-Modules:      Drync.Client
                      , Drync.Missing
                      , Drync.Options
                      , Drync.Sync
                      , Drync.System
                      , Drync.Transfer
                      , Data.Conduit.Progress
                      , Data.Conduit.Throttle
  Build-Depends:        base            >= 4            && < 5
                      , Glob
                      , bytestring
                      , conduit
                      , directory
                      , filepath
                      , google-drive    >= 0.3.1
                      , google-oauth2
                      , mtl
                      , optparse-applicative
                      , template-haskell
                      , text                               < 2.0
                      , time
                      , transformers
                      , unix

Executable drync
  Default-Language:     Haskell2010
  Main-Is:              main.hs
  GHC-Options:          -Wall -static
  Build-Depends:        base
                      , drync
                      , filepath
                      , google-oauth2
                      , google-drive
                      , xdg-basedir

Source-Repository head
  Type:                 git
  Location:             https://github.com/pbrisbin/drync
