name:                   drync
version:                0.0.0
author:                 Pat Brisbin <pbrisbin@gmail.com>
maintainer:             Pat Brisbin <pbrisbin@gmail.com>
license:                MIT
license-file:           LICENSE
-- synopsis:               Short description, appears in Hackage listings
-- description:            Long explanation, appears at top of project page
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -static
  exposed-modules:      Drync.Client
                      , Drync.Config
                      , Drync.Missing
                      , Drync.Options
                      , Drync.Sync
                      , Drync.System
                      , Drync.Transfer
                      , Data.Conduit.Throttle
  build-depends:        base            >= 4            && < 5
                      , Glob
                      , ascii-progress
                      , bytestring
                      , configurator
                      , conduit
                      , directory
                      , filepath
                      , google-drive    >= 0.3.1
                      , google-oauth2
                      , mtl
                      , optparse-applicative
                      , template-haskell
                      , text                               < 2.0
                      , time
                      , transformers
                      , unix

executable drync
  default-language:     Haskell2010
  main-is:              main.hs
  ghc-options:          -Wall -static
  build-depends:        base
                      , drync
                      , filepath
                      , google-oauth2
                      , google-drive
                      , xdg-basedir

source-repository head
  type:                 git
  location:             https://github.com/pbrisbin/drync
